<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task.TaskFragment">

    <!-- Filter search -->
    <EditText
        android:id="@+id/et_search_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Title"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_add_task"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Button add task -->
    <ImageButton
        android:id="@+id/btn_add_task"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_add_24"
        android:background="@drawable/rounded_rectangle"
        android:contentDescription="Add Task"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Filters for completed and pending tasks -->
    <CheckBox
        android:id="@+id/cb_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Completed"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/et_search_task"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <CheckBox
        android:id="@+id/cb_pending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pending"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/et_search_task"
        app:layout_constraintStart_toEndOf="@+id/cb_completed"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <!-- RecyclerView para listar as tarefas -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_task_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cb_pending"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
