<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task.ui.AddTaskActivity">

    <EditText
        android:id="@+id/et_task_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Task Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/et_task_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Task Description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_task_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <CheckBox
        android:id="@+id/cb_task_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Completed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_task_description"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btn_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_task_completed"
        android:layout_margin="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
