<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.TaskDashboardDetailActivity">

    <!-- maif.taskmanagerplus.data.model.Task Title -->
    <TextView
        android:id="@+id/tv_task_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Task Title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />

    <!-- maif.taskmanagerplus.data.model.Task Description -->
    <TextView
        android:id="@+id/tv_task_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Task Description"
        app:layout_constraintTop_toBottomOf="@id/tv_task_detail_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp" />

    <!-- maif.taskmanagerplus.data.model.Task Status -->
    <TextView
        android:id="@+id/tv_task_detail_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Task Status"
        app:layout_constraintTop_toBottomOf="@id/tv_task_detail_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
