<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- maif.taskmanagerplus.data.model.Task Title -->
    <TextView
        android:id="@+id/tv_task_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Task Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_task_status"
        android:layout_margin="8dp" />

    <!-- maif.taskmanagerplus.data.model.Task Status -->
    <TextView
        android:id="@+id/tv_task_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pending"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_task"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp" />

    <!-- Edit Button -->
    <ImageButton
        android:id="@+id/btn_edit_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_24"
    android:contentDescription="Edit Task"
    app:layout_constraintEnd_toStartOf="@id/btn_delete_task"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_margin="8dp"/>

    <!-- Delete Button -->
    <ImageButton
        android:id="@+id/btn_delete_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_24"
    android:contentDescription="Delete Task"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_margin="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
